--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,13 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    implementation "com.squareup.moshi:moshi:1.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+
+    implementation "com.squareup.retrofit2:adapter-rxjava:2.1.0"
 }
