--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
 
     implementation "com.squareup.retrofit2:adapter-rxjava:2.1.0"
+
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 }
